manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: registry.gitlab.com/kashish6707-group/deploy_code:fastapi-v1
          ports:
            - containerPort: 80
