manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
spec:
  selector:
    app: fastapi
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
